# spbu-tree-practice

./: CMakeLists.txt  README.md  REFLECTION.md
.github/workflows/: CI.yml  tests.yml  tidy-format.yml
lib/: CMakeLists.txt  bst.c  bst.h  bstInternal.h  die.h  iterator.c  iterator.h  stackNode.c  stackNode.h
tests/: CMakeLists.txt  test.c
